@@ -2432,7 +2432,7 @@ B:BITE:HURT:1d5
 F:FORCE_MAXHP | FORCE_SLEEP | DROP_CORPSE | 
 F:ONLY_GOLD | DROP_60 | DROP_1D2 | HAS_EGG | IMPRESED | 
 F:OPEN_DOOR | BASH_DOOR | CAN_FLY |
-F:EVIL | DRAGON | IM_ELEC | BASEANGBAND | ATTR_MULTI | ATTR_MULTI
+F:EVIL | DRAGON | IM_ELEC | BASEANGBAND | ATTR_MULTI
 S:1_IN_12 | 
 S:BR_ELEC
 D:This hatchling dragon is still soft, its eyes unaccustomed to light and 
