@@ -531,7 +531,7 @@ H:WEIRD_MIND | EMPTY_MIND | EVIL | R_CHAR_Z | R_CHAR_r
 M:SMART | BASH_DOOR | MOVE_BODY | REGENERATE
 M:IM_ACID | IM_FIRE | IM_COLD | IM_ELEC | IM_POIS | NO_CONF | NO_SLEEP
 M:NO_FEAR | RES_NETH | RES_NEXU | RES_PLAS | RES_DISE
-M:FORCE_MAXHP | ATTR_MULTI
+M:FORCE_MAXHP | ATTR_MULTI | ATTR_ANY
 S:1_IN_12 | HEAL
 
 # (T)
