@@ -628,13 +628,24 @@ Change list for PernMangband
 - shallow levels of cave contain many stairs.
 [B] "You bump into it." in the place where a king committed suicide.
 
+7/1/2001 (Jir)
+[B] "You bump into it." when in erratical form.
+[C][B] Random class-selecting sometimes failed.
+- STARTING_STAT_LIMIT compile option, which force the max to 18/40.
+- MULTI_HUED_PROPER compile option, which makes some monsters shimmer nicely.
+- uniques and ego monsters 'sometimes' glitter. (better if bold..)
+- compact_* functions are ameliorated. (hopefully it fixes black-trap too?)
+  This seems to lessen the load and memory consumption in a great way :)
+- adjusted teleport_player a little more.
+
 
 ---- below this line are the unfixed bugs known ----
-[B] Self-reproducing black trap
+[B] Self-reproducing black trap (.. fixed?)
 [B] Wilderness map('M') is not available.
 [B] Panic save often enters into infinite loop.
 [B] Player forgets the memory of suburb areas (not a bug?)
 [B] Recalling in wilderness dungeons/caves always cause infinite loop.
+[B] Restarting server erases all the floor.
 [B] 
 ---- below this line are changes to be done in the future ----
 - recall-depth array for each dungeons/towers
